--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 	display: flex;
 	flex-wrap: wrap;
 	font-family: "calibri";
+
 }
 .login {
 	box-sizing: border-box;
@@ -15,6 +16,7 @@ body{
 	padding: 5%;
 	background-color: rgb(32,38,53);
 	color: grey;
+	height: 100vh;
 }
 
 .main {
@@ -23,7 +25,7 @@ body{
 	background-image: url("https://www.jrailpass.com/blog/wp-content/uploads/2018/07/obon-festival-japan-1280x720.jpg");
 	background-size: cover;
 	background-position: center;
-	min-height: 550px;
+	height: 100vh;
 }
 
 .icon-container {
@@ -141,12 +143,10 @@ body{
 
 	.login {
 		width: 100%;
-		height: 100%;
 	}
 
 	.main {
 		width: 100%;
-		height: 100%;
 	}
 
 }
@@ -154,17 +154,14 @@ body{
 @media screen and ( min-width: 600px ) {
 	.wrapper {
 		width: 100%;
-		height: 100%;
 	}
 
 	.login {
 		width: 40%;
-		height: 100%;
 	}
 
 	.main {
 		width: 60%;
-		min-height: 100%;
 	}
 
 	.main-container {
@@ -177,18 +174,15 @@ body{
 @media screen and ( min-width: 992px ) {
 	.wrapper {
 		width: 98vw;
-		height: 100%;
 		margin: 0 auto;
 	}
 
 	.login {
 		width: 38%;
-		height: 100%;
 	}
 
 	.main {
 		width: 58%;
-		min-height: 100%;
 	}
 
 	.main-container {
